# nordea-api-client

./: Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: rust.yml
certs/: how_to_create_private_key.md  private-key.pk8
doc/: example_test_suite.yaml
doc/accounts/: rough_idea.txt
doc/authorization/: rough_idea.txt
src/: errors.rs  lib.rs  main.rs
src/api/: configuration.rs  mod.rs
src/api/personal_authorisation/endpoints/: decoupled_authentication_and_authorization.rs  get_assets.rs  mod.rs  token_revocation.rs
src/api/personal_authorisation/models/: account_payload.rs  agreement.rs  agreement_conflict_error.rs  asset_response.rs  assets_payload.rs  auth_request.rs  authentication_request.rs  authentication_response.rs  authorize_request.rs  authorize_response.rs  authorize_selected_agreement_request.rs  bearer_token.rs  card_payload.rs  error_payload.rs  error_response.rs  failure.rs  mod.rs  pagination.rs  request_echo.rs  response_header.rs  scope.rs  token_revocation_request.rs
src/conf/: languages.rs  mod.rs  settings.rs
src/running/: context.rs
tests/: nordea.rs
tests/features/: authorization.feature  authorization_bkup.feature
