[package]
name = "nordea"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
cucumber = "0.21.0"
playwright = "0.0.20"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.3"
uuid = { version = "^1.3", features = ["serde"] }
reqwest = { version = "0.12.4", features = ["json", "multipart", "blocking"] }
ring = "0.17.8"
base64 = "0.22.1"
chrono = "0.4.26"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "time"] }
static-include-bytes = "2.0.0"

[[test]]
name = "nordea"
harness = false
